--- a/index.html
+++ b/index.html
@@ -50,8 +50,14 @@
             <div class="result">
                 <h2>7 résultat</h2>
                 <select name="filter" id="filter">
-                    <option value="">
+                    <option value="1">
                         Prix croissant
+                    </option>
+                    <option value="1">
+                        999€
+                    </option>
+                    <option value="1">
+                        1100€
                     </option>
                 </select>
             </div>
