--- a/index.html
+++ b/index.html
@@ -64,9 +64,9 @@
 
             <div class="car_results">
                 <div class="img_container">
-                    <i id="previous" class="fa-solid fa-caret-left"></i>
+                    <i class="fa-solid fa-caret-left previous"></i>
                     <img src="./src/vehicule1.png" alt="Peugeot" id="peugeotimg">
-                    <i id="next" class="fa-solid fa-caret-right"></i>
+                    <i class="fa-solid fa-caret-right next"></i>
                 </div>
                 <div class="info">
                     <h2>Peugeot 208</h2>
@@ -75,9 +75,9 @@
                     <button>Reserve et Payer</button>
                 </div>
                 <div class="img_container">
-                    <i id="previous" class="fa-solid fa-caret-left"></i>
+                    <i class="fa-solid fa-caret-left previous"></i>
                     <img src="./src/vehicule2.png" alt="Ford" id="fordimg">
-                    <i id="next" class="fa-solid fa-caret-right"></i>
+                    <i class="fa-solid fa-caret-right next"></i>
                 </div>
                 <div class="info">
                     <h2>Ford Focus</h2>
@@ -86,9 +86,9 @@
                     <button>Reserve et Payer</button>
                 </div>
                 <div class="img_container">
-                    <i id="previous" class="fa-solid fa-caret-left"></i>
+                    <i class="fa-solid fa-caret-left previous"></i>
                     <img src="./src/vehicule3.png" alt="audi" id="auditimg">
-                    <i id="next" class="fa-solid fa-caret-right"></i>
+                    <i class="fa-solid fa-caret-right next"></i>
                 </div>
                 <div class="info">
                     <h2>Audi A1</h2>
@@ -97,9 +97,9 @@
                     <button>Reserve et Payer</button>
                 </div>
                 <div class="img_container">
-                    <i id="previous" class="fa-solid fa-caret-left"></i>
+                    <i id="previous" class="fa-solid fa-caret-left previous"></i>
                     <img src="./src/vehicule4.png" alt="Opel Mokka" id="opelimg">
-                    <i id="next" class="fa-solid fa-caret-right"></i>
+                    <i class="fa-solid fa-caret-right next"></i>
                 </div>
                 <div class="info">
                     <h2>Opel Mokka</h2>
